--- a/css/style.css
+++ b/css/style.css
@@ -438,6 +438,8 @@ template {
 
 .col-xs-9 {
   width: 75%; }
+  .col-xs-9--custom {
+    width: 70.33333333%; }
 
 .col-xs-8 {
   width: 66.66666667%; }
@@ -458,6 +460,8 @@ template {
 
 .col-xs-3 {
   width: 25%; }
+  .col-xs-3--custom {
+    width: 24.33333333%; }
 
 .col-xs-2 {
   width: 16.66666667%; }
@@ -1009,7 +1013,7 @@ body {
     position: absolute;
     bottom: -293px;
     background: url(../img/about-bckg.png);
-    width: 1920px;
+    width: 100%;
     height: 445px; }
 
 .contacs {
@@ -1950,11 +1954,375 @@ button.swiper-pagination-bullet {
   letter-spacing: 5px; }
 
 .order {
-  height: 2200px; }
+  height: 2220px; }
+
+.order__text {
+  float: left;
+  width: 457px;
+  font-size: 10px;
+  font-weight: 400;
+  text-align: center; }
+  .order__text--margin {
+    margin-bottom: 90px; }
+
+.technical {
+  margin-top: 225px;
+  position: relative; }
+  .technical:after {
+    content: " ";
+    height: 455px;
+    position: absolute; }
+
+.technical__auto {
+  display: inline-block;
+  padding: 0 13px; }
+
+.technical__img {
+  width: 120px;
+  height: 64px;
+  padding-bottom: 29px; }
+
+.tech-form {
+  margin-left: 10px; }
+
+.tech-form__text {
+  margin: 0;
+  margin-top: 15px;
+  margin-bottom: 5px;
+  font-size: 15px;
+  font-weight: 100; }
+
+.tech-form__input {
+  border-radius: 10px;
+  border: 1px solid #959595;
+  font-size: 10px;
+  font-weight: 100;
+  color: #000; }
+
+.tech-form__input-text {
+  padding-left: 50px;
+  width: 172px;
+  height: 27px; }
+
+.tech-form__input-address {
+  padding-left: 10px;
+  margin-top: 28px;
+  width: 488px;
+  height: 27px; }
+
+.tech-form__wrap {
+  width: 510px; }
+
+.tech-form__input-data {
+  margin-top: 6px;
+  padding-left: 10px;
+  width: 235px;
+  height: 32px;
+  border-radius: 10px 0 0 10px; }
+
+.tech-form__input-time {
+  padding-left: 10px;
+  width: 235px;
+  height: 32px;
+  border-radius: 0 10px 10px 0; }
+
+.tech-form__textarea {
+  margin-top: 14px;
+  padding-left: 10px; }
+
+.tech-form__input-name {
+  margin-bottom: 7px;
+  padding-left: 10px;
+  width: 501px;
+  height: 28px; }
+
+.tech-form__input-tel {
+  padding-left: 10px;
+  width: 501px;
+  height: 28px; }
+
+.tech-form__pay {
+  margin: 0;
+  margin-top: 11px;
+  margin-bottom: 2px;
+  font-size: 15px;
+  font-weight: 100; }
+
+.tech-form__wrap {
+  width: 511px; }
+  .tech-form__wrap--btn {
+    margin-top: 152px; }
+
+.tech-form__desc {
+  display: inline-block;
+  width: 261px;
+  vertical-align: sub;
+  font-size: 10px;
+  font-weight: 400;
+  text-transform: uppercase; }
+
+.tech-form__btn {
+  display: inline-block;
+  vertical-align: text-bottom;
+  width: 245px;
+  height: 36px;
+  border-radius: 10px;
+  background-color: #ff0000;
+  border: none;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase; }
+
+.switch-field {
+  margin-top: 45px; }
+  .switch-field--cat {
+    margin-top: 235px; }
+
+.switch-title {
+  margin-bottom: 6px; }
+
+.switch-field input {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow: hidden; }
+
+.switch-field label {
+  float: left; }
+
+.switch-field label {
+  display: inline-block;
+  width: 235px;
+  height: 30px;
+  border: 2px solid #959595;
+  border-radius: 15px;
+  background-color: #ffffff;
+  transition: all 0.1s ease-in-out;
+  color: #000000;
+  font-size: 23px;
+  font-weight: 100;
+  padding-top: 5px;
+  padding-left: 15px; }
+
+.switch-field label:hover {
+  cursor: pointer; }
+
+.switch-field input:checked + label {
+  background-color: #A5DC86;
+  background: url(../img/checked-order.png) no-repeat;
+  background-size: 120%;
+  box-shadow: none; }
+
+.switch-field label:first-of-type {
+  border-radius: 13px 0px 0 13px; }
+
+.switch-field label:last-of-type {
+  border-radius: 0 13px 13px 0; }
+
+.pay-field {
+  width: 511px; }
+
+.pay-title {
+  margin-bottom: 6px; }
+
+.pay-field input {
+  position: absolute;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  width: 1px;
+  border: 0;
+  overflow: hidden; }
+
+.pay-field label {
+  float: left; }
+
+.pay-field label {
+  display: inline-block;
+  margin-left: 5px;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 14px;
+  font-weight: normal;
+  text-align: center;
+  text-shadow: none;
+  padding: 6px 14px;
+  transition: all 0.1s ease-in-out;
+  width: 220px;
+  height: 17px;
+  border-radius: 0 10px 10px 0;
+  border: 1px solid #959595; }
+
+.pay-field label:hover {
+  cursor: pointer; }
+
+.pay-field input:checked + label {
+  background-color: #36ff00;
+  box-shadow: none; }
+
+.pay-field label:first-of-type {
+  border-radius: 4px 0 0 4px; }
+
+.pay-field label:last-of-type {
+  border-radius: 0 4px 4px 0; }
+
+.price-table {
+  border-collapse: collapse;
+  width: 100%;
+  font-size: 15px;
+  font-weight: 400; }
+
+tbody tr:nth-child(odd) {
+  border: 1px dotted #959595;
+  background-color: rgba(149, 149, 149, 0.17); }
+
+.price-table td {
+  height: 76px; }
+
+.price-table td:nth-child(1), .price-table th:nth-child(1) {
+  width: 71px; }
+
+.table td:nth-child(2), .table th:nth-child(2) {
+  width: 184px; }
+
+.table td:nth-child(3), .table th:nth-child(3) {
+  width: 110px; }
+
+.table td:nth-child(4), .table th:nth-child(4) {
+  width: 226px; }
+
+.table td:nth-child(5), .table th:nth-child(5) {
+  width: 410px; }
+
+.table td:nth-child(6), .table th:nth-child(6) {
+  width: 118px; }
+
+.price-table__index {
+  padding-left: 8px;
+  font-family: 'Federation';
+  font-size: 10px;
+  font-weight: 400; }
+
+.price-table__time {
+  padding-right: 15px; }
+
+.price-table__red {
+  padding-left: 13px;
+  color: #ff0000;
+  font-family: 'Federation';
+  font-size: 20px; }
+
+.price-table__location {
+  padding-left: 12px;
+  padding-right: 20px; }
+
+.price-table__work {
+  padding: 0 20px; }
+
+.price-table__sale {
+  padding-right: 26px;
+  padding-left: 17px;
+  color: red; }
 
 .registration {
+  position: relative;
   min-height: 351px;
   background: url(../img/registration-bg-2.png) no-repeat, #000; }
+
+.registration__img {
+  position: absolute;
+  bottom: -397px;
+  left: 52px; }
+
+.registration__text {
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+  text-transform: uppercase;
+  position: absolute;
+  top: 168px;
+  left: 434px; }
+
+.form-reg {
+  position: absolute;
+  right: -735px;
+  top: -34px;
+  width: 376px;
+  height: 427px;
+  border-radius: 30px;
+  background-color: #000000;
+  background: url(../img/reg-bg.png) no-repeat; }
+
+.form-reg__title {
+  margin: 0;
+  margin-top: 27px;
+  margin-bottom: 5px;
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center; }
+
+.form-reg__hr {
+  width: 338px;
+  height: 5px;
+  background-color: #ff0000;
+  border: none; }
+
+.form-reg__text {
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center; }
+
+.form-reg__description {
+  margin: 55px auto 0 auto;
+  width: 250px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 400; }
+
+.form-reg__wrap {
+  padding: 0 47px;
+  margin-top: 13px; }
+
+.form-reg__input {
+  margin-bottom: 14px;
+  width: 245px;
+  height: 38px;
+  border-radius: 19px;
+  border: 1px solid #737373;
+  background-color: #ffffff;
+  padding-left: 37px; }
+
+.form-reg__link {
+  margin-left: 44px;
+  margin-top: 0px;
+  width: 282px;
+  display: block;
+  padding: 10px 0px 13px 0px;
+  border-radius: 19px;
+  border: 3px solid #ff0000;
+  outline: none;
+  color: #ff0000;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center; }
+  .form-reg__link:hover {
+    background: red;
+    color: #fff; }
+
+.form-reg__yes {
+  float: right;
+  margin-top: -12px;
+  color: #ffffff;
+  font-size: 10px;
+  font-weight: 100; }
 
 .map__img {
   width: 100%;
@@ -2055,3 +2423,131 @@ button.swiper-pagination-bullet {
     background-color: #ff0000;
     color: #ffffff;
     transition: all 0.4s; }
+
+.newsletter__wrap-tel {
+  padding-left: 15px;
+  padding-bottom: 25px; }
+  .newsletter__wrap-tel p {
+    padding-left: 13px; }
+
+.newsletter__phone {
+  display: block;
+  font-family: 'Federation';
+  font-size: 20px;
+  font-weight: 400;
+  color: #000000;
+  text-decoration: none; }
+
+.newsletter__link-help {
+  display: block;
+  padding-top: 7px;
+  padding-left: 45px;
+  color: #ff0000;
+  font-size: 20px;
+  font-weight: 400;
+  text-decoration: underline;
+  transition: all 0.4s; }
+  .newsletter__link-help:hover {
+    color: #000;
+    transition: all 0.4s; }
+
+.newsletter-form {
+  position: relative;
+  margin-top: 35px;
+  margin-left: 10px; }
+
+.newsletter-form__input {
+  margin-bottom: 16px;
+  width: 345px;
+  height: 41px;
+  border-radius: 15px;
+  border: 1px solid #000000;
+  background-color: #ffffff;
+  padding-left: 15px; }
+  .newsletter-form__input:focus {
+    border: 1px solid red;
+    outline: none; }
+
+input::placeholder {
+  color: #000; }
+
+.newsletter-form__btn {
+  width: 125px;
+  height: 37px;
+  border-radius: 15px;
+  background-color: #ff0000;
+  border: 0;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500; }
+
+.social__link {
+  display: inline-block;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  width: 34px;
+  height: 34px; }
+
+.footer {
+  position: relative;
+  background: url(../img/bg-black.png) repeat;
+  min-height: 313px;
+  width: 100%;
+  overflow: hidden; }
+  .footer:before {
+    content: " ";
+    position: absolute;
+    top: -64px;
+    right: 334px;
+    width: 379px;
+    height: 107px;
+    background: url(../img/bottom-figure-3.png) no-repeat; }
+
+.footer__wrap {
+  margin-top: 85px; }
+  .footer__wrap--other {
+    margin-top: 68px;
+    margin-left: 19px; }
+
+.footer__hr {
+  height: 5px;
+  width: 863px;
+  background-color: #ffffff; }
+
+.footer__qr {
+  float: left;
+  margin-top: 34px;
+  margin-left: 15px;
+  margin-right: 12px; }
+
+.footer__licence {
+  margin-top: 43px;
+  font-size: 15px;
+  font-weight: 400;
+  color: #ffffff; }
+
+.footer__address {
+  margin-left: 60px;
+  margin-top: 23px;
+  font-size: 15px;
+  font-weight: 400;
+  color: #fff; }
+
+.footer__tel {
+  margin-left: 60px;
+  font-size: 10px;
+  font-weight: 300;
+  color: #ff0000; }
+
+.footer__code {
+  margin-left: 66px;
+  font-family: 'Federation';
+  font-size: 15px;
+  font-weight: 400;
+  color: #ffffff; }
+
+.footer__num {
+  font-family: 'Federation';
+  font-size: 20px;
+  font-weight: 400;
+  color: #ffffff; }
